// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ChatMessageView > renders a streaming message correctly 1`] = `
"Assistant (streaming...)
  Streaming content...
"
`;

exports[`ChatMessageView > renders a system message 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────────────────────────╮
│ This is a system message.                                                                        │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯"
`;

exports[`ChatMessageView > renders a system message correctly 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────────────────────────╮
│ System message content.                                                                          │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯"
`;

exports[`ChatMessageView > renders a user message correctly 1`] = `
"You [8:59:42 PM]
  Hello, world!
"
`;

exports[`ChatMessageView > renders a user message with timestamp 1`] = `
"You [12:00:00 PM]
  Hello, world!
"
`;

exports[`ChatMessageView > renders an assistant message correctly 1`] = `
"Assistant [8:59:42 PM]
  How can I help you?
"
`;

exports[`ChatMessageView > renders an assistant message with sources 1`] = `
"Assistant [12:00:00 PM]
  Here is some information.
  Sources: doc1.pdf (90%) · webpage.html (75%)
"
`;

exports[`ChatMessageView > renders an assistant message with streaming indicator 1`] = `
"Assistant (streaming...)
  Processing...
"
`;
